Classe Navigateur et Options avec les vues (bug ou il faut redimenssionner la fenêtre pour avoir la bonne disposition des éléments. Je changerai mes noms anglais en français la prochaine fois

--- a/source/ressources/fxml/MainMenu.fxml
+++ b/source/ressources/fxml/MainMenu.fxml
@@ -21,6 +21,6 @@
     </VBox>
 
     <stylesheets>
-        <URL value="@menustyle.css" />
+        <URL value="@../css/menustyle.css" />
     </stylesheets>
 </GridPane>
