--- a/source/ressources/fxml/Partie.fxml
+++ b/source/ressources/fxml/Partie.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane fx:id="partiePane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
+<StackPane fx:id="partiePane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
 
-</Pane>
+</StackPane>
