--- a/source/ressources/fxml/PauseMenu.fxml
+++ b/source/ressources/fxml/PauseMenu.fxml
@@ -7,16 +7,15 @@
 <?import javafx.scene.layout.*?>
 
 <?import java.net.URL?>
-<StackPane fx:id="pausePane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-      prefHeight="400.0" prefWidth="600.0" alignment="CENTER">
-    <VBox fx:id="content" alignment="CENTER">
-        <Button fx:id="reprendre" text="Reprendre"/>
-        <Button fx:id="param" text="Paramètres"/>
+<StackPane fx:id="pausePane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
+    <VBox fx:id="content" alignment="CENTER" spacing="8">
+        <Button fx:id="reprendre" text="Reprendre" onAction="#reprendre"/>
+        <Button fx:id="param" text="Paramètres" onAction="#parametres"/>
         <Button fx:id="sauvegarder" text="Sauvegarder"/>
-        <Button fx:id="sauvegarderQuitter" text="Sauvegarder &amp; quitter"/>
+        <Button fx:id="sauvegarderQuitter" text="Sauvegarder &amp; quitter" onAction="#sauvegarderQuitter"/>
     </VBox>
 
     <stylesheets>
-        <URL value="@pausestyle.css" />
+        <URL value="@../css/pausestyle.css" />
     </stylesheets>
 </StackPane>
