--- a/source/ressources/fxml/Partie.fxml
+++ b/source/ressources/fxml/Partie.fxml
@@ -6,6 +6,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane fx:id="partiePane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" alignment="CENTER">
+<StackPane fx:id="partiePane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+    <VBox>
+
+    </VBox>
 
 </StackPane>
